gtrainlovestory/css/styles.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
@import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,400italic,300italic,700,700italic);
@import url(http://fonts.googleapis.com/css?family=Nunito:400,300,700);
@import url(http://fonts.googleapis.com/css?family=Amatic+SC:400,700);

/* ==========================================================================
Added
========================================================================== */

.phone {
  color: pink;
}

.warning {
  color: lightpink;
}

.header-logo {
  color: white;
}

.footer-group li a {
  font-size: 10px;
}

.light-box {
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-property: background-color;
  transition-property: background-color; 
  -webkit-box-shadow: 0px 3px 0px 0px #f0f2f4;
  -moz-box-shadow: 0px 3px 0px 0px #f0f2f4;
  box-shadow: 0px 3px 0px 0px #f0f2f4;
  padding: 20px 0;
}

.light-box:hover, .light-box:focus { 
  background-color: #E8E9EE;
  -webkit-box-shadow: 0px 3px 0px 0px #3dc9b3;
  -moz-box-shadow: 0px 3px 0px 0px #3dc9b3;
  box-shadow: 0px 3px 0px 0px #3dc9b3;
}

.box-hover {
  transition: all 500ms ease-in-out;
  -webkit-transition: all 500ms ease-in-out;
  -moz-transition: all 500ms ease-in-out;
  -o-transition: all 500ms ease-in-out;
}

.box-hover:hover, .box-hover:focus {
  transform: translate(0, -15px);
  -webkit-transform: translate(0, -15px);
  -ms-transform: translate(0, -15px);
}

.hand {
  font-family: 'Amatic SC';
  font-weight: 700;
  letter-spacing: 0.2em;
}

h1, h2, h3 {
  font-family: 'Amatic SC';
  font-weight: 700;
  letter-spacing: 0.2em; 
}

.map {
  width: 40%;
  height: auto;
}

.zoomy1 img {
    width: 100%;
    height: auto;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out; }
.zoomy1 .zoomy2 {
    position: relative;
    overflow: hidden; }
.zoomy1 .zoomy2:hover img, .blog .zoomy2:focus img {
    -ms-transform: scale(1.1);
    -webkit-transform: scale(1.1);
    transform: scale(1.1); }

.primary-pics {
    width: 100%;
}

.gallery img {
  width: 30%;
  height: auto;
  margin: 10px;
  vertical-align: top;
}

/*.gallery {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 22px 0 0 0;
}

.gallery ul {
    -moz-column-count: 3;
    -moz-column-gap: 2%;
    -webkit-column-count: 3;
    -webkit-column-gap: 2%;
    column-count: 3;
    column-gap: 2%;
    margin: 0 auto;
    padding: 0;
    max-width: 1000px;
}

.gallery ul li {
  display: inline-block;
  list-style: none;            
  margin-bottom: 20px;
  padding: 0;
  width: 100%;
}

.gallery ul li img {
  width: 400px;
  height: 100%;
  padding: 10px 20px;
  margin-bottom: 10px;
  display: block;
}
       
@media only screen and (min-width: 768px) and (max-width: 999px) {

  .gallery ul {
    -moz-column-count: 2;
    -moz-column-gap: 2%;
    -webkit-column-count: 2;
    -webkit-column-gap: 2%;
    column-count: 2;
    column-gap: 2%;
    padding: 0 2%;
  }

}

@media only screen and (max-width: 767px) {
  
  .gallery ul {
    -moz-column-count: 1;
    -moz-column-gap: 2%;
    -webkit-column-count: 1;
    -webkit-column-gap: 2%;
    column-count: 1;
    column-gap: 2%;
    padding: 0 2%;
  }
  
}*/

/* ==========================================================================
Typography
========================================================================== */

p {
  font-size: 1em;
  line-height: 1.4;
  color: rgba(28, 54, 83, 0.6);
  padding-bottom: 20px;
}

h1 {
  font-size: 6em;
  line-height: 1.4;
}

h2 {
  font-size: 4em;
  line-height: 1.4;
  color: #3D4351;
}

h3 {
  font-size: 3em;
  line-height: 1.4;
  margin-bottom: 20px;
  color: #3D4351;
}

h4 {
  font-size: 2em;
  line-height: 1.4;
}

h5 {
  font-size: 1em;
  color: #3D4351;
  text-transform: uppercase;
  letter-spacing: 0.2em;
  font-weight: 500;
  line-height: 1.4;
}

h6 {
  font-size: 1em;
  color: #3D4351;
  font-weight: 500;
  line-height: 1.4;
}

.btn {
  font-size: .75em;
  border: solid 2px;
  border-radius: 40px;
  display: inline-block;
  text-transform: uppercase;
  letter-spacing: 0.2em;
}

.btn:hover, .btn:focus {
  color: #fff;
  border-color: rgba(71, 228, 194, 1);
  background-color: rgba(71, 228, 194, 1);
}

.btn-white {
  font-size: .75em;
  border: solid 2px;
  border-radius: 40px;
  display: inline-block;
  border-color: #fff;
}

.btn-white:hover, .btn-white:focus {
  color: rgba(71, 228, 194, 1);
  border-color: rgba(71, 228, 194, 1);
}

.btn-fill {
  color: #fff;
  border: solid 2px rgba(71, 228, 194, 1);
  border-radius: 40px;
  display: inline-block;
  text-transform: uppercase;
  letter-spacing: 0.2em;
  background-color: rgba(71, 228, 194, 1);
}

.btn-fill:hover, .btn-fill:focus {
  color: #fff;
  background-color: rgba(52, 173, 146, 1);
  border-color: rgba(52, 173, 146, 1);
}

.btn-small {
  padding: 8px 40px;
}

.btn-large {
  padding: 15px 40px;
}

.btn-margin-right {
  margin-right: 20px;
}

section.intro, section.features-extra, section.sign-up {
  background: #fff;
}

section.features, section.blog-intro, section.blog {
  background: #F3F4F8;
}

/* ==========================================================================
Global Styles
========================================================================== */

.group:after {
  content: "";
  display: table;
  clear: both;
}

.no-padding {
  padding: 0;
}

.no-margin {
  margin: 0;
}

a {
  color: rgba(71, 228, 194, 1);
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-property: color, border-color, background-color;
  transition-property: color, border-color, background-color;
}
/* ... */

